// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> should render properly 1`] = `
<div>
  <div
    className="notification notification--INFO"
  >
    <div
      className="iconContainer"
    >
      <MessageIcon
        height={1.8}
        level="INFO"
        width={1.8}
      />
    </div>
    <p>
      test
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 100%;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }

          .iconContainer {
            min-width: 32px;
            margin-right: 0.6rem;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 1`] = `
<div>
  <div
    className="notification notification--ERROR"
  >
    <div
      className="iconContainer"
    >
      <MessageIcon
        height={1.8}
        level="ERROR"
        width={1.8}
      />
    </div>
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 100%;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }

          .iconContainer {
            min-width: 32px;
            margin-right: 0.6rem;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 2`] = `
<div>
  <div
    className="notification notification--SUCCESS"
  >
    <div
      className="iconContainer"
    >
      <MessageIcon
        height={1.8}
        level="SUCCESS"
        width={1.8}
      />
    </div>
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 100%;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }

          .iconContainer {
            min-width: 32px;
            margin-right: 0.6rem;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 3`] = `
<div>
  <div
    className="notification notification--WARNING"
  >
    <div
      className="iconContainer"
    >
      <MessageIcon
        height={1.8}
        level="WARNING"
        width={1.8}
      />
    </div>
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 100%;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }

          .iconContainer {
            min-width: 32px;
            margin-right: 0.6rem;
          }
        
  </style>
</div>
`;

exports[`<Notification /> should render with different icon 4`] = `
<div>
  <div
    className="notification notification--INFO"
  >
    <div
      className="iconContainer"
    >
      <MessageIcon
        height={1.8}
        level="INFO"
        width={1.8}
      />
    </div>
    <p>
      error
    </p>
  </div>
  <style
    jsx={true}
  >
    
          .notification {
            display: flex;
            align-items: center;
            box-sizing: border-box;
            padding: 1rem;
            font-size: 1.05rem;
            font-family: 'Josefin Sans', sans-serif;
            color: #F8F8F7;
            width: 100%;
            min-height: 5rem;
            background-color: #2d3047;
            border-radius: 3px;
            box-shadow: 11px 10px 34px -7px rgba(0, 0, 0, 0.49);
          }

          .notification--ERROR {
            background-color: #982649;
          }

          .notification--SUCCESS {
            background-color: #75ab88;
          }

          .notification--WARNING {
            background-color: #E37E5B;
          }

          .iconContainer {
            min-width: 32px;
            margin-right: 0.6rem;
          }
        
  </style>
</div>
`;
